--- a/layanan-kristen.html
+++ b/layanan-kristen.html
@@ -253,7 +253,7 @@
         <p>Silakan pilih layanan sesuai kebutuhan Anda:</p>
 
         <div class="submenu-grid">
-        <a class="submenu-item" href="https://forms.gle/g44DHyyNowBnCyvp8" target="_blank">
+        <a class="submenu-item" href="https://forms.gle/HaeGCYLaA878y3XC6" target="_blank">
             <i class="fa-solid fa-file-circle-check"></i>
             Pengurusan Surat Keterangan Terdaftar
         </a>
@@ -302,3 +302,4 @@
    </footer>
 </body>
 </html>
+
