--- a/portal_pelayanan_terpadu.html
+++ b/portal_pelayanan_terpadu.html
@@ -469,15 +469,11 @@
           <i class="fa-solid fa-hand-holding-dollar icon"></i>
           <div class="label">ZAKAT & WAKAF</div>
         </div>
+        <div class="service-card" data-link="https://forms.gle/Xu4apbVEgakWcUFe7">
+          <i class="fa-solid fa-hand-holding-dollar icon"></i>
+          <div class="label">Survey Aspirasi dan Layanan Masyarakat</div>
+        </div>
       </div>
-    </section>
-        <!-- SURVEY KEPUASAN -->
-    <section class="survey-section">
-      <a href="https://forms.gle/Xu4apbVEgakWcUFe7" target="_blank" class="survey-button">
-        <i class="fas fa-clipboard-check"></i>
-        Survey Kepuasan Layanan
-      </a>
-    </section>
 
 
     <!-- KONTAK HUMAS -->
