--- a/portal_pelayanan_terpadu.html
+++ b/portal_pelayanan_terpadu.html
@@ -470,7 +470,7 @@
           <div class="label">ZAKAT & WAKAF</div>
         </div>
         <div class="service-card" data-link="https://forms.gle/Xu4apbVEgakWcUFe7">
-          <i class="fa-solid fa-hand-holding-dollar icon"></i>
+          <i class="fas fa-clipboard-check"></i>
           <div class="label">Survey Aspirasi dan Layanan Masyarakat</div>
         </div>
       </div>
