--- a/portal_pelayanan_terpadu.html
+++ b/portal_pelayanan_terpadu.html
@@ -470,8 +470,8 @@
           <div class="label">ZAKAT & WAKAF</div>
         </div>
         <div class="service-card" data-link="https://forms.gle/Xu4apbVEgakWcUFe7">
-          <i class="fas fa-clipboard-check"></i>
-          <div class="label">Survey Aspirasi dan Layanan Masyarakat</div>
+          <i class="fa-solid fa-clipboard-check"></i>
+          <div class="label">SURVEI ASPIRASI & PENILAIAN MASYARAKAT</div>
         </div>
       </div>
 
