--- a/portal_pelayanan_terpadu.html
+++ b/portal_pelayanan_terpadu.html
@@ -425,12 +425,8 @@
   <main>
     <section class="hero">
       <div class="hero-inner">
-        <div class="search-wrap">
-          <div class="search" role="search">
-            <input id="searchInput" type="search" placeholder="Cari Layanan..." aria-label="Cari layanan">
-            <button id="searchBtn"><i class="fa-solid fa-magnifying-glass"></i> Cari</button>
-          </div>
-        </div>
+        <h1 class="title">SIMURNI</h1>
+        <p class="subtitle">Sistem Informasi Melayani Masyarakat, Mudah, Responsif, dan Integratif</p>
       </div>
     </section>
 
