--- a/portal_pelayanan_terpadu.html
+++ b/portal_pelayanan_terpadu.html
@@ -136,7 +136,7 @@
     .title {
       font-size: 44px;
       letter-spacing: 1px;
-      color: var(--white);
+      color: var(--green);
       font-weight: 700;
       margin: 0 0 8px;
       text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
