--- a/portal_pelayanan_terpadu.html
+++ b/portal_pelayanan_terpadu.html
@@ -13,6 +13,7 @@
       --green: #1f7a3a;
       --green-light: #4caf50;
       --white: #ffffff;
+      --red: #FF0000
       --max-width: 1200px;
     }
 
@@ -136,7 +137,7 @@
     .title {
       font-size: 44px;
       letter-spacing: 1px;
-      color: var(--green);
+      color: var(--red);
       font-weight: 700;
       margin: 0 0 8px;
       text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
@@ -144,7 +145,7 @@
 
     .subtitle {
       margin: 0 0 28px;
-      color: #fff;
+      color: --red;
       opacity: 0.95;
       text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
     }
