--- a/portal_pelayanan_terpadu.html
+++ b/portal_pelayanan_terpadu.html
@@ -137,17 +137,17 @@
     .title {
       font-size: 44px;
       letter-spacing: 1px;
-      color: var(--red);
+      color: #ffffff; /* putih */
       font-weight: 700;
       margin: 0 0 8px;
-      text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+      text-shadow: 0 2px 4px rgba(0, 0, 0, 1); /* bayangan hitam */
     }
-
+    
     .subtitle {
       margin: 0 0 28px;
-      color: --red;
+      color: #ffffff; /* putih */
       opacity: 0.95;
-      text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+      text-shadow: 0 2px 4px rgba(0, 0, 0, 1); /* bayangan hitam */
     }
 
     .search-wrap {
