--- a/portal_pelayanan_terpadu.html
+++ b/portal_pelayanan_terpadu.html
@@ -140,16 +140,15 @@
       color: #ffffff; /* putih */
       font-weight: 700;
       margin: 0 0 8px;
-      text-shadow: 0 2px 4px rgba(0, 0, 0, 1); /* bayangan hitam */
+      -webkit-text-stroke: 1px #000000; /* garis tepi hitam */
     }
     
     .subtitle {
       margin: 0 0 28px;
       color: #ffffff; /* putih */
       opacity: 0.95;
-      text-shadow: 0 2px 4px rgba(0, 0, 0, 1); /* bayangan hitam */
+      -webkit-text-stroke: 1px #000000; /* garis tepi hitam */
     }
-
     .search-wrap {
       display: flex;
       justify-content: center;
