--- a/portal_pelayanan_terpadu.html
+++ b/portal_pelayanan_terpadu.html
@@ -140,15 +140,24 @@
       color: #ffffff; /* putih */
       font-weight: 700;
       margin: 0 0 8px;
-      -webkit-text-stroke: 1px #000000; /* garis tepi hitam */
+      text-shadow: 
+        2px 2px 4px rgba(0, 0, 0, 1),
+        -2px -2px 4px rgba(0, 0, 0, 1),
+        2px -2px 4px rgba(0, 0, 0, 1),
+        -2px 2px 4px rgba(0, 0, 0, 1); /* shadow tebal */
     }
     
     .subtitle {
       margin: 0 0 28px;
       color: #ffffff; /* putih */
       opacity: 0.95;
-      -webkit-text-stroke: 1px #000000; /* garis tepi hitam */
+      text-shadow: 
+        2px 2px 4px rgba(0, 0, 0, 1),
+        -2px -2px 4px rgba(0, 0, 0, 1),
+        2px -2px 4px rgba(0, 0, 0, 1),
+        -2px 2px 4px rgba(0, 0, 0, 1); /* shadow tebal */
     }
+
     .search-wrap {
       display: flex;
       justify-content: center;
