--- a/portal_pelayanan_terpadu.html
+++ b/portal_pelayanan_terpadu.html
@@ -134,9 +134,9 @@
     }
 
     .title {
-      font-size: 44px;
+      font-size: 45px;
       letter-spacing: 1px;
-      color: #ffffff; /* putih */
+      color: #8B0000; /* Merah gelap */
       font-weight: 700;
       margin: 0 0 8px;
       text-shadow: 
