--- a/portal_pelayanan_terpadu.html
+++ b/portal_pelayanan_terpadu.html
@@ -136,7 +136,7 @@
     .title {
       font-size: 45px;
       letter-spacing: 1px;
-      color: #8B0000; /* Merah gelap */
+      color: #FFFFFF; /* putih */
       font-weight: 700;
       margin: 0 0 8px;
       text-shadow: 
