--- a/portal_pelayanan_terpadu.html
+++ b/portal_pelayanan_terpadu.html
@@ -136,7 +136,7 @@
     .title {
       font-size: 45px;
       letter-spacing: 1px;
-      color: #FF0000; /* merah murni */
+      color: #FF0033; /* Menyala, cocok efek glow */
       font-weight: 700;
       margin: 0 0 8px;
       text-shadow: 
@@ -148,7 +148,7 @@
     
     .subtitle {
       margin: 0 0 28px;
-      color: #ffffff; /* putih */
+      color: #FF0033; /* Menyala, cocok efek glow */
       opacity: 0.95;
       text-shadow: 
         2px 2px 4px rgba(0, 0, 0, 1),
