--- a/portal_pelayanan_terpadu.html
+++ b/portal_pelayanan_terpadu.html
@@ -136,7 +136,7 @@
     .title {
       font-size: 45px;
       letter-spacing: 1px;
-      color: #FF4D4D; /* Merah terang agak oranye */
+      color: #f56b6b; /* Merah terang agak oranye */
       font-weight: 700;
       margin: 0 0 8px;
       text-shadow: 
@@ -148,7 +148,7 @@
     
     .subtitle {
       margin: 0 0 28px;
-      color:#FF4D4D; /* Merah terang agak oranye */
+      color:#f56b6b; /* Merah terang agak oranye */
       opacity: 2;
       text-shadow: 
         2px 2px 4px rgba(0, 0, 0, 1),
