--- a/portal_pelayanan_terpadu.html
+++ b/portal_pelayanan_terpadu.html
@@ -430,7 +430,7 @@
     <section class="hero">
       <div class="hero-inner">
         <h1 class="title">SIMURNI</h1>
-        <p class="subtitle">Sistem Informasi Melayani Masyarakat, Mudah, Responsif, dan Integratif</p>
+        <p class="subtitle">Sistem Informasi Melayani Masyarakat Minahasa, Mudah, Responsif, dan Integratif</p>
       </div>
     </section>
   
