--- a/portal_pelayanan_terpadu.html
+++ b/portal_pelayanan_terpadu.html
@@ -429,8 +429,8 @@
   <main>
     <section class="hero">
       <div class="hero-inner">
-        <h1 class="title">SIMURNI</h1>
-        <p class="subtitle">Sistem Informasi Melayani Masyarakat Minahasa, Mudah, Responsif, dan Integratif</p>
+        <h1 class="title">SITOU</h1>
+        <p class="subtitle">Smart Information Technology for Online Users</p>
       </div>
     </section>
   
