--- a/sekjen.html
+++ b/sekjen.html
@@ -275,8 +275,8 @@
          </h1>
       </div>
       <div class="header-center">
-         <h2>SIMURNI</h2>
-         <p>Sistem Informasi Melayani Masyarakat, Mudah, Responsif, dan Integratif</p>
+         <h2>SIMAPALUS</h2>
+         <p>Sistem Informasi Melayani Masyarakat Terpadu Layanan Satu Pintu</p>
       </div>
       <div class="header-right">
          <img src="LOGO_HUMAS_2.png" alt="Logo Humas">
@@ -332,3 +332,4 @@
    </footer>
 </body>
 </html>
+
