--- a/pendidikan-islam.html
+++ b/pendidikan-islam.html
@@ -1,4 +1,4 @@
-<!doctype html>
+F<!doctype html>
 <html lang="id">
 <head>
    <meta charset="utf-8" />
@@ -257,8 +257,8 @@
          </h1>
       </div>
       <div class="header-center">
-         <h2>SIMURNI</h2>
-         <p>Sistem Informasi Melayani Masyarakat, Mudah, Responsif, dan Integratif</p>
+         <h2>SIMAPALUS</h2>
+         <p>Sistem Informasi Melayani Mayarakat Terpadu Layanan Satu Pintu</p>
       </div>
       <div class="header-right">
          <img src="LOGO_HUMAS_2.png" alt="Logo Humas">
@@ -322,3 +322,4 @@
 
 </body>
 </html>
+
