--- a/katolik.html
+++ b/katolik.html
@@ -247,8 +247,8 @@
          <h1>Kementerian Agama <br><span>Kabupaten Minahasa</span></h1>
       </div>
       <div class="header-center">
-         <h2>SIMURNI</h2>
-         <p>Sistem Informasi Melayani Masyarakat, Mudah, Responsif, dan Integratif</p>
+         <h2>SIMAPALUS</h2>
+         <p>Sistem Informasi Melayani Masyarakat Terpadu Layanan Satu Pintu</p>
       </div>
       <div class="header-right">
          <img src="LOGO_HUMAS_2.png" alt="Logo Humas">
@@ -305,3 +305,4 @@
    </footer>
 </body>
 </html>
+
