--- a/bimas-islam.html
+++ b/bimas-islam.html
@@ -246,8 +246,8 @@
          <h1>Kementerian Agama <br><span>Kabupaten Minahasa</span></h1>
       </div>
       <div class="header-center">
-         <h2>SIMURNI</h2>
-         <p>Sistem Informasi Melayani Masyarakat, Mudah, Responsif, dan Integratif</p>
+         <h2>SIMAPALUS</h2>
+         <p>Sistem Informasi Melayani Masyarakat Terpadu Layanan Satu Pintu</p>
       </div>
       <div class="header-right">
          <img src="LOGO_HUMAS_2.png" alt="Logo Humas">
@@ -311,3 +311,4 @@
    </footer>
 </body>
 </html>
+
