layanan-kristen.html

--- a/layanan-kristen.html
+++ b/layanan-kristen.html
@@ -238,7 +238,7 @@
       </div>
       <div class="header-center">
          <h2>SIMAPALUS</h2>
-         <p>Sistem Melayani Masyarakat Terpadu Layanan Satu Pintu</p>
+         <p>Sistem Informasi Melayani Masyarakat Terpadu Layanan Satu Pintu</p>
       </div>
       <div class="header-right">
          <img src="LOGO_HUMAS_2.png" alt="Logo Humas">
@@ -302,5 +302,6 @@
    </footer>
 </body>
 </html>
+
 
 
